hphp/hack/test/typecheck/trait_priv_extends2.php.exp
File "trait_priv_extends2.php", line 8, characters 7-7:
Class C does not correctly implement all required members  (Typing[4113])
File "trait_priv_extends2.php", line 9, characters 7-7:
Some members are incompatible with those declared in type T
Read the following to see why:
File "trait_priv_extends2.php", line 15, characters 20-20:
This member visibility is: private
File "trait_priv_extends2.php", line 5, characters 28-28:
public was expected
